# BelG2P

./: .classpath  .gitignore  .project  Conv1.java  Conv2.java  FanetykaAllWords.java  README.md  build.xml  pom.xml
org/alex73/fanetyka/impl/: Fanetyka.java  Fanetyka2.java  Fanetyka3.java  Fanetyka4.java  FanetykaTestArfaep.java  FanetykaTestSpisu.java  FanetykaText.java  Huk.java  Prystauki.java  adds.txt  marfiemy.txt  slovautv_teza.txt  slovautvarennie.3.txt  spraudzana.txt
org/alex73/fanetyka/impl/ui/: FanetykaUI.java  MainWindow.form  MainWindow.java
org/alex73/korpus/voice/: Fanetyka3.java  Fanetyka4.java  FanetykaText.java  Huk.java  Prystauki.java
pywrapper/: BUILD.txt  README.md  pyproject.toml
pywrapper/BelG2P/: __init__.py  wrapper.py
src/: AhlusennieAzvancennie.tsv  BilabijalnyV.tsv  HubnaZubnyM.tsv  Miakkasc.tsv  Pazicyjnyja.tsv  PierachodFH.tsv  PierachodI.tsv  PierachodZG.tsv  PierachodZHA.tsv  Pierachody.tsv  PierachodyV.tsv  Pryklady.tsv  Prypadabniennie.tsv  Redukavanyja.tsv  Sprascennie.tsv  SypiacyjaSvisciacyja.tsv  UstaunyA.tsv  UstaunyJ.tsv  ahlusennieIazvancennie.tsv
src/main/resources/: AhlusennieAzvancennie.tsv  Miakkasc.tsv  Pryklady.tsv  Sprascennie.tsv  SypiacyjaSvisciacyja.tsv  UstaunyJ.tsv
src/org/alex73/fanetyka/config/: Case.java  CaseCross.java  Cell.java  IConfig.java  ProcessCase.java  ProcessConfig.java  TsvConfig.java  TsvCrossConfig.java  TsvPrykladyConfig.java
src/org/alex73/fanetyka/impl/: Fanetyka3.java  Fanetyka4.java  FanetykaConfig.java  FanetykaTTSPrepare.java  FanetykaText.java  Huk.java  IFanetyka.java  (+16 more)
(+78 files in other folders)
